# Chloride

./: .gitattributes  .gitignore  .gitmodules  .todo  CMakeLists.txt  CMakeUserPresets.json  CMakeUserPresets.json.license  Jenkinsfile  LICENSE  LICENSE.txt  Makefile  README.md  anonymous-function-test.ar  app.py  argon-package.json  build-stdlib.sh  build-windows-installer.py  build-wxs.py  compile_flags.txt  conanfile.py  cool2.asm  debug_arbin.py  errors.txt  even_random.py  final_test.ar  gentest.ar  gentest.py  installation.md  iso-lock.json  linux-arm-profile.txt  mingw-x86_64.txt  mingw-x86_64.txt.license  null_test.ar  out.car  perf.data  perf.data.old  rand_test.ar  test.ar  test.py  test.txt  (+7 more)
.reuse/: config.toml
LICENSES/: LGPL-3.0-or-later.txt  MIT.txt
basic_raylib_binding/: main.c
gpg/: argon-packages-public.gpg
include/: Argon.h  ArgonFunction.h  ArgonTypes.h
native_code_example/: Cargo.toml  main.c
refactor_scripts/: argon_methods.py  expose_methods.py  mount_argon_methods.py
src/: LICENSE.c  LICENSE.h  LICENSE_c.h  RWLock.h  arobject.h  err.c  err.h  getline.c  getline.h  import.c  import.h  main.c  memory.c  memory.h  returnTypes.h  shell.c  shell.h  version.h
stdlib/: Makefile
tests/: anonymous_function.ar  argon_code_test.ar  argument_unpacking.ar  array.ar  array_creation_seg_fault.ar  array_pop.ar  array_set.ar  array_slice.ar  array_slice.py  broken_inner_function copy.ar  broken_inner_function.ar  caller_initalisation_loop_memory_leak.ar  class_method.ar  class_test.ar  clock.ar  custom_range.ar  date_test.ar  diff.ar  env.ar  error_system.ar  even_random.ar  even_random.py  exception_catch.ar  factorial.ar  failing_binding.ar  file_io.ar  foreverloop.ar  hashmap_creation_seg_fault.ar  hashmap_order.ar  hashmap_to_array_seg_fault.ar  import.ar  (+34 more)
(+297 files in other folders)
